fix dark mode scale

--- a/dark-styles.css
+++ b/dark-styles.css
@@ -1,45 +1,67 @@
 .disable-dbl-tap-zoom {
     touch-action: manipulation;
   }
-html{
-    text-align:center;
-    overflow: hidden;
-}
-input {
-    height: 6vh;
-    float: right;
-    margin-right: 3vh;
-    margin-top: 2vh;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
-}
-body{
-    background-color: #2c3e50;
-    min-height: 100%}
-.display{
-    color: #95a5a6;
-    font-size: 5vh;
-    padding-bottom: 5vh;
-    padding-top: 15vh;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.wrapper{
-    padding-top: 3vh;
-
-}
-
-button {
-    overflow:auto;
-    border-radius: 5px;
-    border: none;
+  html{
+      text-align:center;
+      overflow: hidden;
+      touch-action: manipulation;
+  
+  }
+  input {
+      touch-action: manipulation;
+      height: 6vh;
+      float: right;
+      margin-right: 3vh;
+      margin-top: 2vh;
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%); 
+  }
+      
+  
+  body {
+      touch-action: manipulation;
+      background-color: #2c3e50;
+      min-height: 100%;
+      
+  }
+  .display{
+      touch-action: manipulation;
+  
+      color: #ffffff;
+      font-size: 5vh;
+      padding-bottom: 3vh;
+      padding-top: 12vh;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  .wrapper{
+      touch-action: manipulation;
+      padding-top: 3vh;
+  
+  }
+  
+  button {
+      overflow:auto;
+      border-radius: 5px;
+      border: none;
+      touch-action: manipulation;
+      font-size: 2.5vh;
+      background-color: #34495e;
+      color: white; /* White text */
+      cursor: pointer; /* Pointer/hand icon */
+      width: 45vh; /* Set a width if needed */
+      height: 11vh;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+  
+  }
+  button:disabled{
+      touch-action: manipulation;
+  
+  }
+  button[disabled]{
+    background-color: #cccccc;
+    color: #666666;
     touch-action: manipulation;
-    font-size: 2.5vh;
-    background-color: #34495e; /* Green background */
-    color: white; /* White text */
-    cursor: pointer; /* Pointer/hand icon */
-    width: 45vh; /* Set a width if needed */
-    height: 11vh;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-
-}
+  
+  }
+  
