--- a/styles.css
+++ b/styles.css
@@ -13,18 +13,33 @@ input {
     float: right;
     margin-right: 3vh;
     margin-top: 2vh;
+    /*dark mode 
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); 
+    */
 }
-body{
+    
+
+body {
+    touch-action: manipulation;
+    /*d ark mode 
+    background-color: #2c3e50;
+    */
     background-color: #2980b9;
-    min-height: 100%}
+    min-height: 100%;
+    
+}
 .display{
+    touch-action: manipulation;
+
     color: #ffffff;
     font-size: 5vh;
-    padding-bottom: 5vh;
-    padding-top: 15vh;
+    padding-bottom: 3vh;
+    padding-top: 12vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .wrapper{
+    touch-action: manipulation;
     padding-top: 3vh;
 
 }
@@ -35,6 +50,9 @@ button {
     border: none;
     touch-action: manipulation;
     font-size: 2.5vh;
+    /*dark mode 
+    background-color: #34495e;s
+    */
     background-color: #3498db; /* Green background */
     color: white; /* White text */
     cursor: pointer; /* Pointer/hand icon */
@@ -42,5 +60,15 @@ button {
     height: 11vh;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+
+}
+button:disabled{
+    touch-action: manipulation;
+
+}
+button[disabled]{
+  background-color: #cccccc;
+  color: #666666;
+  touch-action: manipulation;
 
 }
